--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ authors = ["Glenn Adams <glenn@skynav.com>"]
 categories = ["network-programming"]
 description = """
 dnp is a library that implements the Distributed Network Protocol (3)
-protocol stack as defined by IEEE 1815-2012 with IP bindings
-
+protocol stack as defined by IEEE 1815-2012 with IP bindings;
 not yet ready for download - placeholder for work in progress
 """
 documentation = "https://github.com/skynav/dnp"
